package de.sswis.model;

/**
 * Eine Aktion eines Agenten im Verlauf eines Stufenspiels.
 * @author  Michel Bodé
 */
public enum Action {

    /**
     * Der Agent kooperiert mit seinem Gegenspieler.
     */
    COOPERATION,

    /**
     * Der Agent kooperiert nicht mit seinem Gegenspieler.
     */
    DEFECTION
}
