package model;

public abstract class AdaptationAlgorithm {
    public abstract void adapt(Simulation sim);
}
