package model;

public class Pair {
    private Agent agent1;
    private Agent agent2;
    private Game game;

    public Pair(Agent agent1, Agent agent2) {

    }

    public void playGame() {

    }
}
