package model;

public abstract class PairingAlgorithm {
    public abstract Pair[] getPairing(Simulation sim);
}
